# zentra

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
agenttrail/upstream/: pyproject.toml
agenttrail/upstream/docs/: backend-readiness.html  bounded-live-history.md  coding-agent-imports.md  context-provenance.md  export-review.md  html-export.md  langgraph-adapter.md  metadata-only.md  opentelemetry-import.md  outcome-cost.md  parallel-coordination.md  performance-envelope.md  run-comparison.md  taint-security.md  ui-backend-integration.html  verification-gaps.md  warning-policies.md
agenttrail/upstream/src/agent_tail/: __init__.py  cli.py  compare.py  core.py  html_export.py  langgraph.py  otel.py  review.py  security.py  serve.py  session_import.py  ui.py  warning_policy.py
agenttrail/upstream/tests/: comparison_performance_worker.py  performance_fixture.py  performance_worker.py  test_cli.py  test_compare.py  test_core.py  test_docs.py  test_e2e.py  test_html_export.py  test_html_export_e2e.py  test_langgraph_adapter.py  test_otel_import.py  test_outcome_cost.py  test_parallel_coordination.py  test_performance.py  test_review.py  test_review_e2e.py  test_security.py  test_serve.py  test_session_import.py  test_ui.py  test_verification_gaps.py  test_warning_policy.py
agenttrail/upstream/tests/fixtures/: compare-run.jsonl  otel-malformed.json  otel-traces.expected.jsonl  otel-traces.json  parallel-coordination.jsonl  runtime.jsonl  warning-policy.toml
(+569 files in other folders)
