[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tail"
version = "0.1.0"
description = "Local causal timeline for agent runs"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
langgraph = ["langgraph>=1.0.1,<2"]
test = ["playwright>=1.45"]

[project.scripts]
agent-tail = "agent_tail.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_tail = ["web/*.html"]
